00.NETWORK.CloudFormation/sk-IaC-infra-vpc-EKS.yaml
---
########################################################################################################
# Templatename : sk-IaC-infra-vpc-base-EKS.yaml
# Purpose : Cloudformation for initial configuration of SK IaC standard infrastructure
#           Network basic composition such as VPC among static resources 
#           Reference Architecture : Base Type A ( xxxxxxxx.jpg )
# ------------------------------------------------------------------------------------------------------
#  version :     date      :    developer      :  reason
#  -------   -------------   -----------------   -------------------------------------------------------
#   1.0       2020.03.20      kim sang kyeong     first created
#   1.1       2021.02.06      eom joon sik        Revision for SKT Project
########################################################################################################
AWSTemplateFormatVersion: '2010-09-09'
Description: >
   'Cloudformation for initial configuration of SK IaC standard infrastructure (Reference Architecture : Base Type A)'

#----------------------[[ Metadata ]]-------------
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Set Basic Information for Infra Configuration"
        Parameters:
          - ProjectName
          - Environment
          - StackCreator
          - SKIaCVpcBlock
          - SKIaCPublicSubnet1Block
          - SKIaCPublicSubnet2Block
          - SKIaCPrivateNodeGroupSubnet1Block
          - SKIaCPrivateNodeGroupSubnet2Block
          - SKIaCPrivateDBSubnet1Block
          - SKIaCPrivateDBSubnet2Block

          
#----------------------[[ Parameters ]]-------------
Parameters:
# >>>>  Project Info Start    

  ProjectName:
    Description: 'Project Business System Abbr. (Please enter an abbreviation).'
    Type: String

  Environment:
    Description: 'Select the Infra environment use you want to configure.'
    Type: String
    Default: develop
    AllowedValues:
      - develop
      - product
     
  StackCreator:
    Description: 'Enter your IAM User Name.'
    Type: String
    Default: your-iamuserid

    
#  Project Info End  <<<<<    

# >>>> VPC Info Start    
  SKIaCVpcBlock:
    Type: String
    Default: 100.64.0.0/24
    Description: The CIDR range for the VPC. SKT standard CIDR for Cloud is RFC 6598(100.64.0.0/10).
# VPC Info End  <<<<<

# >>>> Subnet Info Start    

########## Public Network ###############

## Service Zone
  SKIaCPublicSubnet1Block:
    Type: String
    Default: 100.64.0.0/27
    Description: CidrBlock for service-public-[p/d]-subnet1 within the VPC

  SKIaCPublicSubnet2Block:
    Type: String
    Default: 100.64.0.32/27
    Description: CidrBlock for service-public-[p/d]-subnet2 within the VPC  
########## Public Network ###############

########## Private Network ###############
## DB Zone
  SKIaCPrivateDBSubnet1Block:
    Type: String
    Default: 100.64.0.64/27
    Description: CidrBlock for service-db-private-[p/d]-subnet1 within the VPC

  SKIaCPrivateDBSubnet2Block:
    Type: String
    Default: 100.64.0.96/27
    Description: CidrBlock for service-db-private-[p/d]-subnet2 within the VPC

## Service Zone
  SKIaCPrivateNodeGroupSubnet1Block:
    Type: String
    Default: 100.64.0.128/26
    Description: CidrBlock for service-nodegrp-private-[p/d]-subnet1 within the VPC

  SKIaCPrivateNodeGroupSubnet2Block:
    Type: String
    Default: 100.64.0.192/26
    Description: CidrBlock for service-nodegrp-private-[p/d]-subnet2 within the VPC
########## Private Network ###############
    
#  Subnet Info End  <<<<<            
              
#----------------------[[ Conditions ]]-------------
Conditions:
#  InNorthEast2:
#    Fn::Equals: 
#      - Ref: AWS::Region
#      - 'ap-southeast-2'
  IsDevelopEnv:
    Fn::Equals: 
      - !Sub  '${Environment}'
      - develop
  IsProductEnv:
    Fn::Equals:
      - !Sub  '${Environment}'
      - product
#----------------------[[ Mappings ]]-------------
Mappings:
  # for environment abbr
  EnvMap:
    develop: 
      abbr: '-d'
    product:
      abbr: '-p'

#----------------------[[ Resources ]]-------------
Resources:

## VPC - IGW - ROUTER - eip - NAT   
  skIaCVpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Sub '${SKIaCVpcBlock}'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-vpc'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'
      - Key: Creator
        Value: !Sub '${StackCreator}'        

  skIaCVpcIgw:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-vpc-igw'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'
      - Key: Creator
        Value: !Sub '${StackCreator}'

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref skIaCVpcIgw
      VpcId: !Ref skIaCVpc        

## public route table
  skIaCVpcRoute:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-public-route'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'
      - Key: Creator
        Value: !Sub '${StackCreator}'      

  skIaCVpcRouteRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref skIaCVpcRoute
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref skIaCVpcIgw

## nat 
  skIaCEip1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-eip1'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'   
      - Key: Creator
        Value: !Sub '${StackCreator}'  
      - Key: Purpose
        Value: !Join 
          - ''
          - - 'eip for '
            - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-vpc-nat1'        
        
  skIaCEip2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc 
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-eip2'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'   
      - Key: Creator
        Value: !Sub '${StackCreator}'  
      - Key: Purpose
        Value: !Join 
          - ''
          - - 'eip for '
            - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-vpc-nat2' 
              
###  precondition : public subnet created       
  skIaCNat1:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'skIaCEip1.AllocationId'
      SubnetId: !Ref SKIaCPublicSubnet1
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ]
            - '-vpc-nat1'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'   
      - Key: Creator
        Value: !Sub '${StackCreator}'

  skIaCNat2:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'skIaCEip2.AllocationId'
      SubnetId: !Ref SKIaCPublicSubnet2
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ]
            - '-vpc-nat2'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'
      - Key: Creator
        Value: !Sub '${StackCreator}'
        
## private route table
  skIaCVpcRoute1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-private-route1'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'
      - Key: Creator
        Value: !Sub '${StackCreator}'      
        
  skIaCVpcRoute1Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref skIaCVpcRoute1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref skIaCNat1
      
  skIaCVpcRoute2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-private-route2'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'
      - Key: Creator
        Value: !Sub '${StackCreator}'      
        
  skIaCVpcRoute2Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref skIaCVpcRoute2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref skIaCNat2

        
## Subnet   

### public 
## Service Zone
  SKIaCPublicSubnet1:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Public Subnet 1
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: SKIaCPublicSubnet1Block
      VpcId:
        Ref: skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-public-subnet1'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'   
      - Key: Creator
        Value: !Sub '${StackCreator}'      
      - Key: 'kubernetes.io/role/elb'
        Value: 1    

  SKIaCPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SKIaCPublicSubnet1
      RouteTableId: !Ref skIaCVpcRoute
      
  SKIaCPublicSubnet2:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Public Subnet 2
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: SKIaCPublicSubnet2Block
      VpcId:
        Ref: skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-public-subnet2'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'all'   
      - Key: Creator
        Value: !Sub '${StackCreator}'      
      - Key: 'kubernetes.io/role/elb'
        Value: 1    
     
  SKIaCPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SKIaCPublicSubnet2
      RouteTableId: !Ref skIaCVpcRoute

### private 
## Service Zone
  SVCNodeGroupPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: service-nodegrp-private-[p/d]-subnet1
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: SKIaCPrivateNodeGroupSubnet1Block
      VpcId:
        Ref: skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-private-ng-subnet1'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'service zone'   
      - Key: Creator
        Value: !Sub '${StackCreator}'      
      - Key: Purpose
        Value: 'service for nodegrp in (ap-southeast-2a)'  
      - Key: 'kubernetes.io/role/internal-elb'
        Value: 1     

  SVCNodeGroupPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SVCNodeGroupPrivateSubnet1
      RouteTableId: !Ref skIaCVpcRoute1
      
  SVCNodeGroupPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: service-nodegrp-private-[p/d]-subnet2
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: SKIaCPrivateNodeGroupSubnet2Block
      VpcId:
        Ref: skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-private-ng-subnet2'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'service zone'   
      - Key: Creator
        Value: !Sub '${StackCreator}'      
      - Key: Purpose
        Value: 'service for nodegrp in (ap-southeast-2c)'  
      - Key: 'kubernetes.io/role/internal-elb'
        Value: 1     
        
  SVCNodeGroupPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SVCNodeGroupPrivateSubnet2
      RouteTableId: !Ref skIaCVpcRoute2

## DB Zone
  SVCDBPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: service-db-private-[p/d]-subnet1
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: SKIaCPrivateDBSubnet1Block
      VpcId:
        Ref: skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-private-db-subnet1'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'db zone'   
      - Key: Creator
        Value: !Sub '${StackCreator}'      
      - Key: Purpose
        Value: 'service for db in (ap-southeast-2a)'   
        
  SVCDBPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SVCDBPrivateSubnet1
      RouteTableId: !Ref skIaCVpcRoute1
      
  SVCDBPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: service-db-private-[p/d]-subnet2
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: SKIaCPrivateDBSubnet2Block
      VpcId:
        Ref: skIaCVpc
      Tags:
      - Key: Name
        Value: !Join 
          - ''
          - - !Sub '${ProjectName}'
            - !FindInMap [ EnvMap, !Ref Environment, abbr ] 
            - '-private-db-subnet2'
      - Key: Project
        Value: !Sub '${ProjectName}'
      - Key: Env
        Value: !Sub '${Environment}'
      - Key: Zone
        Value: 'db zone'   
      - Key: Creator
        Value: !Sub '${StackCreator}'      
      - Key: Purpose
        Value: 'service for db in (ap-southeast-2c)'     
        
  SVCDBPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SVCDBPrivateSubnet2
      RouteTableId: !Ref skIaCVpcRoute2

## Security Group

#----------------------[[ Outputs ]]-------------
Outputs:
  Templatename:
    Description: 'Cloudformation for initial configuration of SK IaC standard infrastructure.'
    Value: 'sk-IaC-infra-vpc-EKS.yaml'
    
  TemplateVersion:
    Description: 'sk-IaC-infra-vpc-EKS.yaml version.'
    Value: '1.0'
    
  stackname:
    Description: 'First Stack name.'
    Value: !Sub '${AWS::StackName}'
    
  projectname:
    Description: 'project name.'
    Value: !Sub '${ProjectName}'
    Export:
      Name: !Sub '${AWS::StackName}-projectname'
      
  environment:
    Description: Environment
    Value: !Sub '${Environment}'
    Export:
      Name: !Sub '${AWS::StackName}-environment'

  environmentabbr:
    Description: 'Environment Abbr'
    Value: !FindInMap [ EnvMap, !Ref Environment, 'abbr' ] 
    Export:
      Name: !Sub '${AWS::StackName}-environment-abbr'

  skIaCVpcId:
    Description: The VPC Id
    Value: !Ref skIaCVpc
    Export:
      Name: !Sub '${AWS::StackName}-vpc'

  skIaCVpcRoute:
    Description: The VPC Public Route
    Value: !Ref skIaCVpcRoute
    Export:
      Name: !Sub '${AWS::StackName}-public-route'

  skIaCVpcRoute1:
    Description: The VPC Private Route1 in AZ-a
    Value: !Ref skIaCVpcRoute1
    Export:
      Name: !Sub '${AWS::StackName}-private-route1'
      
  skIaCVpcRoute2:
    Description: The VPC Private Route1 in AZ-c
    Value: !Ref skIaCVpcRoute2
    Export:
      Name: !Sub '${AWS::StackName}-private-route2'
